@@ -1683,8 +1683,8 @@ static int	make_logfile_list(unsigned char flags, const char *filename, int mtim
 			/* do not make logrt[] and logrt.count[] items NOTSUPPORTED if there are no matching log */
 			/* files or they are not accessible (can happen during a rotation), just log the problem */
 #ifdef _WINDOWS
-			zabbix_log(LOG_LEVEL_WARNING, "there are no files matching \"%s\" in \"%s\"", filename_regexp,
-					directory);
+			zabbix_log(LOG_LEVEL_WARNING, "there are no recently modified files matching \"%s\" in \"%s\"",
+					filename_regexp, directory);
 
 			ret = ZBX_NO_FILE_ERROR;
 #else
@@ -1695,8 +1695,8 @@ static int	make_logfile_list(unsigned char flags, const char *filename, int mtim
 			}
 			else
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "there are no files matching \"%s\" in \"%s\"",
-						filename_regexp, directory);
+				zabbix_log(LOG_LEVEL_WARNING, "there are no recently modified files matching \"%s\" in"
+						" \"%s\"", filename_regexp, directory);
 				ret = ZBX_NO_FILE_ERROR;
 			}
 #endif
